@@ -3,6 +3,7 @@
 	(Ideally, this would also need to be enforced at db write level).   
 	Move the shout form in the list.
 	Allow choosing the number of shouts displayed.
+	Make the size of the shout field configurable from the admin interface
 	* User.php:  Make the entire "edit profile" link CSS targetable, including the parentesis.
 
 2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
